Bluetooth_Custom_Server/test01.cydsn/CortexM0/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 11/15/2015 15:27:36 Project: test01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
Deleting file ".\test01.cycdx"
Deleting file ".\test01.svd"
Deleting file ".\test01.rpt"
Deleting file ".\test01_timing.html"
cydsfit.exe -.appdatapath "C:\Users\username\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\username\Dropbox\PSoC Creator\304 Example\Bluetooth_Custom_Server\test01.cydsn\test01.cyprj" -d CY8C4247LQI-BL483 -s "C:\Users\username\Dropbox\PSoC Creator\304 Example\Bluetooth_Custom_Server\test01.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
ADD: pft.M0040: information: The following 4 pin(s) will be assigned a location by the fitter: \I2C_bus:scl(0)\, \I2C_bus:sda(0)\, \SERIAL:rx(0)\, \SERIAL:tx(0)\
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
.\main.c: In function 'main':
.\main.c:54:33: error: 'filtered_combo_pitch' undeclared (first use in this function)
          sensorData.floats[0] = filtered_combo_pitch;   //incrementer or something here
                                 ^
.\main.c:54:33: note: each undeclared identifier is reported only once for each function it appears in
.\main.c:55:33: error: 'filtered_combo_roll' undeclared (first use in this function)
          sensorData.floats[1] = filtered_combo_roll;    //incrementer or something here
                                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/15/2015 15:27:44 ---------------
